--- a/client/uploader.css
+++ b/client/uploader.css
@@ -1,8 +1,9 @@
 /*
  * Original version: 1.0 © 2010 Andrew Valums ( andrew(at)valums.com )
- * Current Maintainer (2.0+): 2012, Ray Nicholus ( fineuploader(at)garstasio.com )
+ * Next Maintainer (2.0+): © 2012, Ray Nicholus ( fineuploader(at)garstasio.com )
+ * Current Maintainer (3.X (MIT Branch)): © 2013, Simon Waldherr ( contact(at)simonwaldherr.de )
  *
- * Licensed under MIT license, GNU GPL 2 or later, GNU LGPL 2 or later, see license.txt.
+ * Licensed under MIT license.
  */
 
 .qq-upload-drop-area, .qq-upload-extra-drop-area {
